export const snapshot = {};

snapshot[`array 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      items: {
        type: "string",
      },
      type: "array",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`array 2`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description one.",
      items: {
        type: "string",
      },
      type: "array",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`array 3`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      description: "Description two. Description one.",
      items: {
        type: "string",
      },
      type: "array",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
